# astrotools

./: CMakeLists.txt  DALS  README.md
cmake_modules/: FindCPPUNIT.cmake  FindCSPICE.cmake  FindDACE.cmake  FindJSON.cmake  cdtiUtils.cmake
examples/dals/: pinpoint
examples/dals/Tests/Combined/GEO/Optical/None/AA/: DALS.input.json  Simulations.input.json
examples/dals/Tests/Combined/GEO/Optical/None/AA/Measurements/: TFRM.tdm
examples/dals/Tests/Combined/GEO/Optical/None/AA/OD/: TFRM.txt
examples/dals/Tests/Combined/GEO/Optical/None/AA/Reference/: TFRM.txt
examples/dals/Tests/Combined/GEO/Optical/None/AA/Results/: DALS_data.txt  TFRM.opm  TFRM_res_map.txt  TFRM_res_table.txt
examples/dals/Tests/Combined/GEO/Optical/None/AS/: DALS.input.json  Simulations.input.json
examples/dals/Tests/Combined/GEO/Optical/None/AS/Measurements/: TFRM.tdm
examples/dals/Tests/Combined/GEO/Optical/None/AS/OD/: TFRM.txt
examples/dals/Tests/Combined/GEO/Optical/None/AS/Observatory/: TFRM.bsp  TFRM.tf
examples/dals/Tests/Combined/GEO/Optical/None/AS/Reference/: TFRM.txt
examples/dals/Tests/Combined/GEO/Optical/None/AS/Results/: TFRM.opm
examples/dals/Tests/Combined/GEO/Optical/None/SS/: DALS.input.json  Simulations.input.json
examples/dals/Tests/Combined/GEO/Optical/None/SS/Measurements/: TFRM.tdm
examples/dals/Tests/Combined/GEO/Optical/None/SS/OD/: TFRM.txt
examples/dals/Tests/Combined/GEO/Optical/None/SS/Observatory/: TFRM.bsp  TFRM.tf
examples/dals/Tests/Combined/GEO/Optical/None/SS/Reference/: TFRM.txt
examples/dals/Tests/Combined/GEO/Optical/None/SS/Results/: TFRM.opm
examples/dals/data/: kernel.txt  sw19571001.sw
examples/dals/data/kernels/: GEO.bsp  GEO.tle  HEO.tle  LEO.bsp  LEO.tle  MOD.tf  earth_000101_200629_200407.bpc  earth_000101_210222_201201.bpc  earth_assoc_IAU.tf  earth_assoc_itrf93.tf  earth_fixed_original.tf  earth_latest_high_prec.bpc  naif0012.tls
modules/: CMakeLists.txt
modules/astro/: AstroCnvRef.h  AstroDynModel.h  AstroLibrary.h  AstroRoutines.h  CMakeLists.txt  Reference.cpp  Reference.h
modules/atmos/: CMakeLists.txt  Exponential.hpp  Nrlmsise00.hpp  Nrlmsise00_data.cpp  Nrlmsise00_math.hpp  Nrlmsise00_p.cpp  Nrlmsise00_p.hpp  SpaceWeather.cpp  SpaceWeather.hpp
modules/cfg/: CMakeLists.txt  Config.cpp  Config.hpp  Environment.cpp  Environment.hpp  EnvironmentOption.hpp  EnvironmentOption_impl.hpp
modules/dynorb/: AIDA.h  AIDAwrappers.h  CMakeLists.txt  DynClass.h  GravityFieldModel.h
modules/geco/: CMakeLists.txt  Factory.hpp  JsonParser.cpp  JsonParser.hpp  LazyLoader.hpp  LazyLoader_impl.hpp  MapEnum.cpp  MapEnum.h  NonCopyable.hpp
modules/odeprop/: CMakeLists.txt  ControlModel.hpp  DynModel.hpp  Propagator.hpp  RK78Propagator.hpp  RKPropagator.hpp  VariableStepPropagator.hpp
modules/sada/: CMakeLists.txt  Conversions.h  HEOSATDynamics.h  HEOSATDynamics_impl.h  Transformations.h  constants.h  luniSolarShortPeriodics.h  mean2oscNonSingular.h
tests/: CMakeLists.txt
tests/atmos/: CMakeLists.txt  Nrlmsise00Test.cpp  SpaceWeatherTest.cpp
tests/cfg/: CMakeLists.txt  EnvironmentTest.cpp  env.json
tests/cfg/data/: env.json
tests/dynorb/: AidaTest.cpp  CMakeLists.txt  env.json
tests/dynorb/data/: input.json  kernel.txt  sw19571001.sw
tests/dynorb/data/kernels/: TOD.tf
tests/geco/: CMakeLists.txt  FactoryTest.cpp  JsonParserTest.cpp
tests/geco/data/: factoryExample.json  jsonParserTest.json
tools/: CMakeLists.txt
tools/aida/: CMakeLists.txt  RunAida.cpp
tools/aida/data/: runAida.template.json
tools/binarygrav/: BinaryGrav.cpp  CMakeLists.txt
tools/dals/: CMakeLists.txt  DALS.hpp  DlibClass.hpp  Exceptions.hpp  LSRoutines.hpp  Main_DALS.cpp  Objects.hpp  Propagation.hpp  SimRoutines.hpp  SpiceRoutines.hpp  Standards.hpp
